# DS_HW_7

./: hw7_pt1.ipynb  hw7_pt2.ipynb  pyproject.toml
